--- a/capitulos/Herramientas_utilizadas.tex
+++ b/capitulos/Herramientas_utilizadas.tex
@@ -20,6 +20,7 @@ Dado que ha sido pionero en el sector y posee una gran cantidad de desarrollador
 
 \begin{center}
 	\includegraphics[width=0.9\textwidth]{imagenes/aws_services.jpg} %[width=4cm,,keepaspectratio]
+	\captionof{figure}{Resumen de servicios AWS}	
 \end{center}
 
 
@@ -81,6 +82,7 @@ Esta librería fue desarrollada originalmente en el año 2001 como parte de un cur
 
 \begin{center}
 	\includegraphics[width=0.9\textwidth]{imagenes/NLTK_modules-1.jpg} %[width=4cm,,keepaspectratio]
+	\captionof{figure}{Módulos NLTK}	
 \end{center}
 
 \section{Scikit-learn}
